# cpp-sky-masking

./: .gitignore  CMakeLists.txt  README.md  main.cpp
SkyDetector/: CMakeLists.txt  sky_detector.cpp  sky_detector.hpp
small_overlap_dataset1/: angles.csv
